Fixed borders overflow in Firefox

--- a/src/ui/popup/news-section/style.less
+++ b/src/ui/popup/news-section/style.less
@@ -5,6 +5,8 @@
 
 .news-section {
     background-color: @color-back;
+    border-bottom-left-radius: @news-section-collapsed-height / 2;
+    border-bottom-right-radius: @news-section-collapsed-height / 2;
     bottom: 0;
     box-sizing: border-box;
     display: flex;
